--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
 
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-junit</artifactId>
+			<version>2.0.0.0</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
