--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,23 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         temp: 
           use_jdbc_metadata_defaults: false
+---
 
+spring:
+  profiles: test
+  datasource:
+    driver-class-name: org.h2.Driver 
+    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    username: sa
+    password: sa
+    initialize: true
+  jpa:
+    hibernate.ddl-auto: create 
+    properties: 
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        temp: 
+          use_jdbc_metadata_defaults: false
 ---
 
 spring:
